--- a/package.json
+++ b/package.json
@@ -7,11 +7,9 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.11",
+    "@mui/system": "^5.15.20",
     "@reduxjs/toolkit": "^1.8.6",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "dotenv": "^16.0.3",
+    "eslint-config-react-app": "^7.0.1",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -20,7 +18,6 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
-    "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
   "scripts": {
