added serve to deploy app

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
+    "serve": "^14.2.3",
     "yup": "^0.32.11"
   },
   "engines": {
